src/igz_controls/components/action-menu/action-menu.less
.igz-action-menu {
    .action-menu-color-set();
    .action-icon-color-set();

    opacity: 1;
    position: relative;

    .menu-button {
        color: @menu-btn-color;
        cursor: pointer;
        font-size: 18px;
        height: 19px;
        text-align: center;
        transition: @igz-basic-transition-color;
        width: 30px;

        &.active,
        &:hover {
            color: @menu-btn-active-hover-color;
        }
    }

    .menu-dropdown {
        visibility: hidden;
        background-color: @menu-dropdown-bg-color;
        border: @menu-dropdown-border;
        border-radius: 2px;
        box-shadow: @menu-dropdown-box-shadow;
        color: @menu-dropdown-color;
        font-family: @font-family-sans-serif;
        font-size: 13px;
        font-weight: 500;
        line-height: normal;
        margin-top: 9px;
        min-width: 129px;
        padding: 8px 0 0;
        position: absolute;
        right: 10px;
        z-index: 10;

        .actions-list {
            cursor: default;
            padding-bottom: 8px;

            .tooltip {
                // !important used to overwrite third-party's inline style
                display: none !important;
            }
        }

        .igz-action-item {
            color: @action-item-color;
            cursor: pointer;
            font-size: 13px;
            font-weight: 400;
            line-height: 32px;
            padding: 0 18px;
            text-align: left;
            white-space: nowrap;

            &:hover,
            &.subtemplate-show {
                background-color: @action-item-hover-bg-color;
            }

            &.inactive {
                color: @action-item-inactive-color;
                pointer-events: none;
            }

            .action-icon {
                color: @action-icon-color;
                display: inline-block;
                padding-right: 14px;

                &:before {
                    font-size: 16px;
                    position: relative;
                    text-align: center;
                    width: 20px;
                    top: 2px;
                }
            }

            .action-label {
                display: inline-block;
            }
        }

        .shortcuts-list {
            padding-bottom: 8px;

            &:not(.first-block) {
                border-top: @shortcuts-list-not-first-block-border;
                padding-top: 8px;
            }
        }

        .shortcuts-header {
            font-family: @font-family-sans-serif;
            color: @shortcuts-header-color;
            line-height: 24px;
            font-size: 13px;
            font-weight: 400;
            padding: 0 15px 4px 22px;
            text-align: left;
        }

        .shortcuts-item {
            color: @shortcuts-item-color;
            cursor: pointer;
            font-weight: 400;
            white-space: nowrap;
            line-height: 32px;
            padding: 0 26px 0 32px;
            text-align: left;
            transition: @igz-basic-transition-color;

            &:hover {
                background-color: @shortcuts-item-hover-bg-color;
            }

        }

    }

    &.small-action-menu {
        .menu-button {
            color: @small-action-menu-btn-color;
            width: auto;
            font-size: 12px;
            display: inline-block;
            height: auto;
            margin: 0;
            vertical-align: sub;
        }

        .menu-dropdown {
            margin: 0;
        }
    }

    .upward-menu {
        visibility: visible;
        top: -55px;
        right: 15px;
    }
}

